fix: text being too wide

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ html:not(.lightmode) {
 }
 
 blockquote {
-    margin-left: 2rem;
+    margin-left: 1rem;
 }
 
 body, html {
